name:                AdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/irpap/AdventOfCode#readme
license:             BSD3
license-file:        LICENSE
author:              Irene Papakonstantinou
maintainer:          eirhnh@gmail.com
copyright:           Copyright: (c) 2017 Irene Papakonstantinou
category:            fun
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable 1
  hs-source-dirs:      src
  main-is:             1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 2
  hs-source-dirs:      src
  main-is:             2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 3
  hs-source-dirs:      src
  main-is:             3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
